@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Added a Greet module for greeting users on join.
     * Added PostgreSQL support. Official modules do not support this yet.
     * database:format now a required configuration value.
     * Added support for MySQL. ./install --with-mysql
